--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-06-phonebook",
+  "name": "goit-react-hw-07-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ViktorTyt.github.io/goit-react-hw-06-phonebook/",
+  "homepage": "https://ViktorTyt.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "svgo": "^2.8.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
