--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.1.7-beta.1",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "svgo": "^2.8.0",
