--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "homepage": "https://ViktorTyt.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
